// Copyright (c) 2017-2019, NVIDIA CORPORATION.  All rights reserved.

syntax = "proto3";

message RetinaNetConfig {
    //optional
    string aspect_ratios = 1;
    //optional
    string aspect_ratios_global = 2;
    //optional
    string scales = 3;
    //optional
    float min_scale = 4;
    float max_scale = 5;
    //required
    bool two_boxes_for_ar1 = 6;
    //required
    string steps = 7;
    //required
    bool clip_boxes = 8;
    //required
    string variances = 9;
    //required
    string offsets = 10;
    //required
    string mean_color = 11;
    string arch = 12;
    //required
    float loss_loc_weight = 13;
    float focal_loss_alpha = 14;
    float focal_loss_gamma = 15;
    repeated float freeze_blocks = 16;
    bool freeze_bn = 17;
    //required
    uint32 nlayers = 18;
    // required
    uint32 n_kernels = 19;
    uint32 feature_size = 20;
    float pos_iou_thresh = 21;
    float neg_iou_thresh = 22;
    uint32 n_anchor_levels = 23;

}
